https://issues.jboss.org/browse/JBIDE-10555 : Browsersim should have a "open in default browser" action - added validation of URL (to do not open 'about:blank' and similar)
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38110 a97e2381-89e5-4abb-bab3-167db6db766c